# scriptwrite

./: LICENSE  config.toml  config.yaml  main.py  pyproject.toml  scriptwrite.py
.github/workflows/: build.yml
scriptwrite/: __init__.py  app.py  config.py  fs.py  log.py  parser.py  render.py  types.py  ui.py  utils.py
scriptwrite/components/: __init__.py  toolbars.py
scriptwrite/features/: __init__.py  panes.py  toolbars.py
scriptwrite/renderers/: __init__.py  block.py  html.py
scriptwrite/widgets/: __init__.py  actions.py  color_utils.py  components.py  cursor.py  descriptors.py  display.py  frame.py  layouts.py  menus.py  panes.py  qre.py  signals.py  status_bar.py  system.py  text.py  timer.py  toolbars.py  utils.py
